//
//
// db3_account.proto
// Copyright (C) 2022 db3.network Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
syntax = "proto3";

import "db3_base.proto";

package db3_account_proto;

message Account {
    db3_base_proto.Units total_bills = 1;
    db3_base_proto.Units credits = 2;
    uint64 total_storage_in_bytes = 3;
    uint64 total_mutation_count = 4;
    uint64 total_session_count = 5;
    uint64 nonce = 6;
}
