//
//
// db3_mutation.proto
// Copyright (C) 2022 db3.network Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";
import "db3_base.proto";
import "db3_database.proto";
package db3_mutation_proto;

enum MutationAction {
    InsertKv = 0;
    DeleteKv = 1;
    Nonce = 2;
}

enum DatabaseAction {
    CreateDB = 0;
    AddCollection = 1;
    AddDocument = 2;
    DeleteDocument = 3;
}

message DatabaseMutation {
    db3_base_proto.BroadcastMeta meta = 1;
    DatabaseAction action = 2;
    bytes db_address = 3;
    repeated CollectionMutation collection_mutations = 4;
    repeated DocumentMutation document_mutations = 5;
}

message CollectionMutation {
    repeated db3_database_proto.Index index = 1;
    string collection_name = 2;
}
message DocumentMutation {
    string collection_name = 1;
    repeated bytes documents = 2;
    repeated string ids = 3;
}
message KVPair {
    // the key of value
    bytes key = 1;
    // the value
    bytes value = 2;
    MutationAction action = 3;
}

message Mutation {
    // the namespace of kv pairs
    bytes ns = 1;
    // the all data to be written to db3
    repeated KVPair kv_pairs = 2;
    // the counter of account
    uint64 nonce = 3;
    // the chain id of db3
    db3_base_proto.ChainId chain_id = 4;
    // the chain role of db3
    db3_base_proto.ChainRole chain_role = 5;
    db3_base_proto.Units gas_price = 6;
    // the predicted gas
    uint64 gas = 7;
}

enum PayloadType {
    MutationPayload =0;
    QuerySessionPayload =1;
    DatabasePayload = 2;
}

message WriteRequest {
    bytes signature = 1;
    // the protobuf binary format
    bytes payload = 2;
    PayloadType payload_type = 4;
}
